# middleware/auth.js
@@ -1,7 +1,7 @@
 const jwt = require("jsonwebtoken");
 const User = require("../models/user");
 const Session = require("../models/session");
-const { PASSWORD_PATTERN } = require("../util/constant");
+const { PASSWORD_PATTERN, EMAIL_PATTERN } = require("../util/constant");
 
 const authenticate = async (req, res, next) => {
 
@@ -85,10 +85,72 @@ const changePasswordValidate = (req, res, next) => {
             error,
         });
     };
+};
 
+const ResetPasswordValidate = (req, res, next) => {
+    const { confirmNewPassword, newPassword, token } = req.body;
+
+    try {
+        if (!confirmNewPassword || !newPassword || !token) {
+            return res.status(400).json({
+                massage: 'Provide All Required Feilds',
+                ["exp."]: {
+                    confirmNewPassword: "string",
+                    newPassword: "string",
+                    token: "string"
+                }
+            });
+        };
+
+        if (newPassword !== confirmNewPassword) {
+            return res.status(400).json({
+                massage: 'new password and confirmation password do not match.',
+            });
+        };
+
+        if (typeof newPassword !== 'string' || newPassword.length < 8 || !PASSWORD_PATTERN.test(newPassword)) {
+            return res.status(400).json({
+                massage: 'New password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, one digit, and one special character',
+            });
+        };
+
+        next();
+    } catch (error) {
+        return res.status(500).json({
+            massage: "error",
+            error,
+        });
+    };
+};
+
+const forgotPasswordValidation = (req, res, next) => {
+    const { email } = req.body;
+
+    try {
+        if (!email) {
+            return res.status(400).json({
+                massage: `Email id required`,
+            });
+        };
+
+        if (!EMAIL_PATTERN.test(email)) {
+            return res.status(400).json({
+                massage: `Invalid email id`,
+            });
+        };
+        next();
+
+    } catch (error) {
+        return res.status(500).json({
+            massage: "error",
+            error,
+        });
+    };
 };
 
 module.exports = {
     authenticate,
     changePasswordValidate,
+    forgotPasswordValidation,
+    ResetPasswordValidate,
 };
